--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "yarn lint-prettier && yarn build && yarn lint"
   },
   "peerDependencies": {
-    "react": ">=16.8.0"
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
