--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "boenfu",
   "main": "bld/library/index.js",
   "types": "bld/library/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "dev": "vite",
     "build": "rimraf ./bld && tsc --build",
